chore: adopt consolidated EDC lib modules (#1024)
* chore: adopt consolidated EDC lib modules

Adopts the consolidated EDC lib module structure. The EDC Connector merges its
~42 fine-grained *-lib artifacts into four (core-lib, jsonld-lib,
control-plane-lib, dsp-lib); this remaps IdentityHub onto the new coordinates:

- consolidates the gradle/libs.versions.toml lib aliases onto the new modules
  (edc-lib-core, edc-lib-jsonld, edc-lib-controlplane); edc-lib-jws2020 is
  unchanged, as the Connector deliberately leaves jws2020-lib standalone,
- remaps all libs.edc.lib.* accessors across the build files and removes the
  now-redundant duplicate catalog dependency entries.

Depends on the upstream consolidation (eclipse-edc/Connector#5844) being merged
and published; verified locally against a publishToMavenLocal build (full
compileJava/compileTestJava/compileTestFixturesJava pass).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* trigger ci

* trigger ci

* stabilize launcher test

---------

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>